--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,6 +10,7 @@
             "request": "launch",
             "program": "${file}",
             "console": "integratedTerminal",
+            "args": ["--latent-dim", "5", "--beta", "0.5", "--gamma", "0.00", "--epochs", "1", "--finetune", "10", "--variant", "1", "--grad-clip", "0.5", "--lr", "5e-3"],
             "justMyCode": false
         }
     ]
