--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,7 +10,7 @@
             "request": "launch",
             "program": "${file}",
             "console": "integratedTerminal",
-            "args": ["--latent-dim", "5", "--beta", "0.5", "--gamma", "0.00", "--epochs", "1", "--finetune", "10", "--variant", "1", "--grad-clip", "0.5", "--lr", "5e-3"],
+            "args": ["--results", "logs/2023/bp_pepper_staggeredhmm/z05/v3_1/no_pretrain0", "--latent-dim", "5", "--beta", "0.005", "--gamma", "1.00", "--pretrain", "0", "--variant", "1", "--grad-clip", "0.5", "--lr", "5e-4", "--optimizer", "AdamW"],
             "justMyCode": false
         }
     ]
