validate w/ Humanoids training, maybe revert back

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,14 +11,17 @@
             "program": "${file}",
             "console": "integratedTerminal",
             "args": [
-                        "--latent-dim", "3", 
+                        "--latent-dim",     "3", 
                         "--hsmm-components", "5",
-                        "--beta",       "0.005", 
-                        "--variant",    "1", 
-                        "--grad-clip",  "0.5", 
-                        "--lr",         "5e-4", 
-                        "--cov-reg",    "1e-4",
-                        "--dataset",    "buetepage",
+                        "--beta",           "0.005", 
+                        "--variant",        "1", 
+                        "--grad-clip",      "0.5", 
+                        "--lr",             "5e-4", 
+                        "--cov-reg",        "1e-4",
+                        "--downsample",     "1",
+                        "--window-size",    "40",
+                        "--mce-samples",    "10",
+                        "--dataset",        "buetepage",
                     ],
             "justMyCode": false
         }
