trying out two separate AEs for H and R

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -14,15 +14,16 @@
                         "--latent-dim",     "3", 
                         "--ssm-components", "5",
                         "--beta",           "0.005", 
-                        "--variant",        "1", 
+                        "--variant",        "2", 
                         "--grad-clip",      "0.5", 
                         "--lr",             "5e-4", 
-                        "--cov-reg",        "1e-4",
-                        "--downsample",     "1",
-                        "--window-size",    "40",
+                        "--cov-reg",        "1e-2",
+                        "--downsample",     "0.2",
+                        "--window-size",    "5",
                         "--mce-samples",    "10",
-                        "--dataset",        "buetepage",
                         "--model",          "VAE",
+                        // "--dataset",        "nuisi",
+                        // "--src",            "./data/nuisi/traj_data.npz",
                     ],
             "justMyCode": false
         }
