--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,21 +11,23 @@
             "program": "${file}",
             "console": "integratedTerminal",
             "args": [
-                        "--latent-dim",     "3", 
-                        "--ssm-components", "5",
                         "--beta",           "0.005", 
-                        "--variant",        "1", 
+                        "--variant",        "4", 
                         "--grad-clip",      "0.5", 
                         "--lr",             "5e-4", 
-                        "--cov-reg",        "1e-2",
                         "--downsample",     "0.2",
                         "--window-size",    "5",
                         "--mce-samples",    "10",
-                        "--model",          "VAE",
+                        "--cov-cond",
+                        // "--ckpt-h",         "logs/2023/bp_hh_20hz/v1_0/diaghmm_z3h5/trial0/models/final.pth",
                         // "--dataset",        "nuisi",
                         // "--src",            "./data/nuisi/traj_data.npz",
                     ],
-            "justMyCode": false
+            "justMyCode": false,
+            "env": {
+                "CUDA_LAUNCH_BLOCKING": "1",
+                "CUDA_VISIBLE_DEVICES": "0",
+              }
         }
     ]
 }
