added Human-Robot training

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,14 +12,14 @@
             "console": "integratedTerminal",
             "args": [
                         "--beta",           "0.005", 
-                        "--variant",        "4", 
+                        "--variant",        "3", 
                         "--grad-clip",      "0.5", 
                         "--lr",             "5e-4", 
                         "--downsample",     "0.2",
                         "--window-size",    "5",
                         "--mce-samples",    "10",
                         "--cov-cond",
-                        // "--ckpt-h",         "logs/2023/bp_hh_20hz/v1_0/diaghmm_z3h5/trial0/models/final.pth",
+                        "--ckpt-h",         "logs/2023/bp_hh_20hz/v1_0/diaghmm_z3h5/trial0/models/final_99.pth",
                         // "--dataset",        "nuisi",
                         // "--src",            "./data/nuisi/traj_data.npz",
                     ],
