--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -18,8 +18,9 @@
                         "--downsample",     "0.2",
                         "--window-size",    "5",
                         "--mce-samples",    "10",
-                        "--cov-cond",
-                        "--ckpt-h",         "logs/2023/bp_hh_20hz/v1_0/diaghmm_z3h5/trial0/models/final_99.pth",
+                        "--cov-reg",        "5e-4",
+                        // "--cov-cond",
+                        // "--ckpt-h",         "logs/2023/bp_hh_20hz/v1_0/diaghmm_z3h5/trial0/models/final_99.pth",
                         // "--dataset",        "nuisi",
                         // "--src",            "./data/nuisi/traj_data.npz",
                     ],
