not using chest/neck joint

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,8 +11,9 @@
             "program": "${file}",
             "console": "integratedTerminal",
             "args": [
-                        "--beta",           "0.005", 
-                        "--variant",        "3", 
+                        "--beta",           "1", 
+                        "--latent-dim",     "3",
+                        "--variant",        "1", 
                         "--grad-clip",      "0.5", 
                         "--lr",             "5e-4", 
                         "--downsample",     "0.2",
@@ -20,10 +21,11 @@
                         "--mce-samples",    "10",
                         // "--cov-reg",        "5e-4",
                         // "--cov-cond",
-                        "--ckpt-h",         "logs/2023/bp_hh_20hz/v1_1/diaghmm_z3h5/trial0/models/300.pth",
-                        "--dataset",        "buetepage_yumi",
-                        "--src",            "./data/buetepage_hr/traj_data.npz",
-                        "--num-joints",    "7",
+                        // "--ckpt",           "logs/2023/bp_hh_20hz/v1_1/diaghmm_z3h5/trial0/models/300.pth",
+                        // "--dataset",        "nuisi",
+                        // "--src",            "./data/nuisi/traj_data.npz",
+                        // "--num-joints",    "7",
+                        "--hidden-sizes",   "40", "20",
                     ],
             "justMyCode": false,
             "env": {
