--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,21 +11,22 @@
             "program": "${file}",
             "console": "integratedTerminal",
             "args": [
-                        "--beta",           "1", 
-                        "--latent-dim",     "3",
-                        "--variant",        "1", 
-                        "--grad-clip",      "0.5", 
-                        "--lr",             "5e-4", 
-                        "--downsample",     "0.2",
-                        "--window-size",    "5",
-                        "--mce-samples",    "10",
+                        // "--beta",           "1", 
+                        // "--latent-dim",     "5",
+                        // "--variant",        "1", 
+                        // "--grad-clip",      "0.5", 
+                        // "--lr",             "5e-4", 
+                        // "--downsample",     "0.2",
+                        // "--window-size",    "5",
+                        // "--mce-samples",    "10",
                         // "--cov-reg",        "5e-4",
                         // "--cov-cond",
                         // "--ckpt",           "logs/2023/bp_hh_20hz/v1_1/diaghmm_z3h5/trial0/models/300.pth",
                         // "--dataset",        "nuisi",
                         // "--src",            "./data/nuisi/traj_data.npz",
                         // "--num-joints",    "7",
-                        "--hidden-sizes",   "40", "20",
+                        // "--hidden-sizes",   "40", "20",
+                        "--latent-dim", "5", "--ssm-components", "6", "--beta", "0.005", "--variant", "1", "--grad-clip", "0.0", "--lr", "5e-4", "--cov-reg", "5e-3", "--downsample", "0.2", "--window-size", "5", "--mce-samples", "10", "--dataset", "buetepage", "--src", "./data/buetepage/traj_data.npz", "--model", "VAE", "--ssm", "HMM", "--hidden-sizes", "40", "20", "--epochs", "400"
                     ],
             "justMyCode": false,
             "env": {
